# EmbedIDS

./: CMakeLists.txt  CNAME  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pr-tests.yml  semantic_pr_title.yaml  test-coverage.yml
cmake/: EmbedIDSConfig.cmake.in
docs/: index.md  quickstart.md  tutorial.md
examples/: CMakeLists.txt  README.md  extensible_example.c  simple_example.c  tutorial_example.c  user_application.c
include/: embedids.h.in
main/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
main/blog/: index.html
main/blogs/: index.html
main/quickstart/: index.html
main/search/: search_index.json
main/tutorial/: index.html
src/: CMakeLists.txt  embedids.c
tests/: CMakeLists.txt  test_algorithms.cpp  test_analysis.cpp  test_core.cpp  test_extensible.cpp  test_metrics.cpp
