[project]
name = "embedids"
version = "0.1.0"
description = "Modern Intrusion Detection System (IDS) for Embedded Systems"
authors = [
    {name = "Amir Alavi",email = "seydamir@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material (>=9.6.15,<10.0.0)",
    "mike (>=2.1.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
